# git-commit-helper

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
docs/: TEST_REPORT.md
openspec/changes/add-commit-message-generation/: README.md  design.md  proposal.md  tasks.md
openspec/changes/add-commit-message-generation/specs/commit-generation/: spec.md
openspec/changes/add-commit-message-generation/specs/history-analysis/: spec.md
openspec/changes/add-commit-message-generation/specs/message-validation/: spec.md
openspec/changes/add-commit-message-generation/specs/prompt-templating/: spec.md
openspec/changes/add-config-init-and-weekly-report/: design.md  proposal.md  tasks.md
openspec/changes/add-config-init-and-weekly-report/specs/config-init/: spec.md
openspec/changes/add-config-init-and-weekly-report/specs/llm-weekly-report/: spec.md
openspec/changes/add-enhanced-features/: README.md  design.md  proposal.md  tasks.md
openspec/changes/add-enhanced-features/specs/environment-doctor/: spec.md
openspec/changes/add-enhanced-features/specs/git-hooks/: spec.md
src/git_commit_helper/: __main__.py  cli.py  config.py  doctor.py  errors.py  git_ops.py  history.py  hooks.py  initializer.py  llm.py  security.py  template.py  validator.py
temlates/: prompt_1.j2
templates/: prompt_1.j2
tests/: test_cli.py  test_config.py  test_doctor.py  test_git_ops.py  test_history.py  test_hooks.py  test_initializer.py  test_llm.py  test_security.py  test_template.py  test_validator.py
(+2 files in other folders)
