[project]
name = "git-commit-helper"
version = "0.1.0"
description = "智能 Git 提交助手：读取 staged diff，调用 LLM 生成 Conventional Commits message"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "openai>=1.30.0",
    "jinja2>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
# 安装后可用 `gch` 命令调用
gch = "git_commit_helper.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=git_commit_helper --cov-report=term-missing"
pythonpath = ["src"]
